# ImplicitFeatureEncoding

./: CITATION.bib  LICENSE  README.md  implicit_feature_encoding.h
code/: CMakeLists.txt  happly.h  implicit_feature_encoding.cpp  main.cpp  octree_unibn.hpp
code/implicit_feature_encoding/: implicit_feature_encoding.cpp  implicit_feature_encoding.h
test_data/modelnet40_randomly_rotated/: airplane_0002.ply  airplane_0003.ply  airplane_0004.ply
test_data/s3dis/: Area_1_conferenceRoom_1.ply  Area_1_conferenceRoom_2.ply  Area_1_copyRoom_1.ply
test_data/sample_spheres/: r15cm_regular_32pts.ply  r35cm_regular_32pts.ply
